--- a/kafka-ssl/docker-compose.yml
+++ b/kafka-ssl/docker-compose.yml
@@ -15,14 +15,12 @@ services:
       ZOOKEEPER_SECURE_CLIENT_PORT: 2182
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_SERVER_CNXN_FACTORY: org.apache.zookeeper.server.NettyServerCnxnFactory
-      # ZOOKEEPER_SSL_KEYSTORE_LOCATION: /etc/kafka/secrets/zookeeper-signed.crt
-      ZOOKEEPER_SSL_KEYSTORE_LOCATION: /etc/kafka/secrets/zookeeper.keystore.jks
+      ZOOKEEPER_SSL_KEYSTORE_LOCATION: /etc/kafka/secrets/zookeeper-keypair.pem
       ZOOKEEPER_SSL_KEYSTORE_PASSWORD: codingharbour
-      # ZOOKEEPER_SSL_KEYSTORE_TYPE: PEM
-      # ZOOKEEPER_SSL_TRUSTSTORE_LOCATION: /etc/kafka/secrets/root.crt
-      ZOOKEEPER_SSL_TRUSTSTORE_LOCATION: /etc/kafka/secrets/truststore.jks
+      ZOOKEEPER_SSL_KEYSTORE_TYPE: PEM
+      ZOOKEEPER_SSL_TRUSTSTORE_LOCATION: /etc/kafka/secrets/root.crt
       ZOOKEEPER_SSL_TRUSTSTORE_PASSWORD: codingharbour
-      # ZOOKEEPER_SSL_TRUSTSTORE_TYPE: PEM
+      ZOOKEEPER_SSL_TRUSTSTORE_TYPE: PEM
       ZOOKEEPER_SSL_CLIENT_AUTH: need
       ZOOKEEPER_AUTH_PROVIDER_X509: org.apache.zookeeper.server.auth.X509AuthenticationProvider
 
@@ -38,10 +36,9 @@ services:
       - ./security:/etc/kafka/secrets 
     environment:
       KAFKA_BROKER_ID: 1
-      # KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092,SSL://broker:29093,SSL_HOST://localhost:9093
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT,SSL:SSL,SSL_HOST:SSL
-      KAFKA_INTER_BROKER_LISTENER_NAME: SSL
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092,TLS://broker:29093,TLS_HOST://localhost:9093
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT,TLS:SSL,TLS_HOST:SSL
+      KAFKA_INTER_BROKER_LISTENER_NAME: TLS #cannot use SSL as name, due to bug in configure script
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
 
@@ -50,19 +47,19 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2182
       KAFKA_ZOOKEEPER_SSL_CLIENT_ENABLE: 'true'
       KAFKA_ZOOKEEPER_CLIENT_CNXN_SOCKET: org.apache.zookeeper.ClientCnxnSocketNetty
-      KAFKA_ZOOKEEPER_SSL_KEYSTORE_LOCATION: /etc/kafka/secrets/broker.keystore.jks
+      KAFKA_ZOOKEEPER_SSL_KEYSTORE_LOCATION: /etc/kafka/secrets/broker-keypair.pem
       KAFKA_ZOOKEEPER_SSL_KEYSTORE_PASSWORD: codingharbour
-      KAFKA_ZOOKEEPER_SSL_KEYSTORE_TYPE: JKS
-      KAFKA_ZOOKEEPER_SSL_TRUSTSTORE_LOCATION: /etc/kafka/secrets/truststore.jks
+      KAFKA_ZOOKEEPER_SSL_KEYSTORE_TYPE: PEM
+      KAFKA_ZOOKEEPER_SSL_TRUSTSTORE_LOCATION: /etc/kafka/secrets/root.crt
       KAFKA_ZOOKEEPER_SSL_TRUSTSTORE_PASSWORD: codingharbour
-      KAFKA_ZOOKEEPER_SSL_TRUSTSTORE_TYPE: JKS
+      KAFKA_ZOOKEEPER_SSL_TRUSTSTORE_TYPE: PEM
       # KAFKA_ZOOKEEPER_SET_ACL: 'true'
 
-      KAFKA_SSL_KEYSTORE_FILENAME: broker.keystore.jks
-      KAFKA_SSL_KEYSTORE_CREDENTIALS: credentials
-      KAFKA_SSL_KEY_CREDENTIALS: credentials
-      KAFKA_SSL_TRUSTSTORE_FILENAME: truststore.jks
-      KAFKA_SSL_TRUSTSTORE_CREDENTIALS: credentials
+      KAFKA_SSL_KEYSTORE_LOCATION: /etc/kafka/secrets/broker-keypair.pem
+      KAFKA_SSL_KEY_PASSWORD: codingharbour
+      KAFKA_SSL_KEYSTORE_TYPE: PEM
+      KAFKA_SSL_TRUSTSTORE_LOCATION: /etc/kafka/secrets/root.crt
+      KAFKA_SSL_TRUSTSTORE_TYPE: PEM
       KAFKA_SSL_CLIENT_AUTH: "required"
       KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: 'true'
 
@@ -78,4 +75,3 @@ services:
   #   container_name: schema-registry
   #   environment:
   #     SCHEMA_REGISTRY_HOST_NAME: schema-registry
-  #     SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: 'zookeeper:2181'
