--- a/kafka-ssl/docker-compose.yml
+++ b/kafka-ssl/docker-compose.yml
@@ -3,15 +3,12 @@ version: '2'
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:6.1.1
-    ports:
-      - 2181:2181
-      # - 2182:2182
     container_name: zookeeper
     volumes:
       - ./security:/etc/kafka/secrets
+    command: "bash -c 'if [ ! -f /etc/kafka/secrets/zookeeper-keypair.pem ]; then echo \"ERROR: SSL certificates missing from /etc/kafka/secrets/ (did you remember to run ./start-cluster.sh instead of docker-compose up -d?)\" && exit 1 ; else /etc/confluent/docker/run ; fi'"
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
-      # TODO ADD ZK SECURITY
       ZOOKEEPER_SECURE_CLIENT_PORT: 2182
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_SERVER_CNXN_FACTORY: org.apache.zookeeper.server.NettyServerCnxnFactory
@@ -33,7 +30,8 @@ services:
       - 9093:9093
     container_name: broker
     volumes:
-      - ./security:/etc/kafka/secrets 
+      - ./security:/etc/kafka/secrets
+    command: "bash -c 'if [ ! -f /etc/kafka/secrets/broker-keypair.pem ]; then echo \"ERROR: SSL certificates missing from /etc/kafka/secrets/ (did you remember to run ./start-cluster.sh instead of docker-compose up -d?)\" && exit 1 ; else /etc/confluent/docker/run ; fi'"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092,TLS://broker:29093,TLS_HOST://localhost:9093
@@ -53,25 +51,25 @@ services:
       KAFKA_ZOOKEEPER_SSL_TRUSTSTORE_LOCATION: /etc/kafka/secrets/root.crt
       KAFKA_ZOOKEEPER_SSL_TRUSTSTORE_PASSWORD: codingharbour
       KAFKA_ZOOKEEPER_SSL_TRUSTSTORE_TYPE: PEM
-      # KAFKA_ZOOKEEPER_SET_ACL: 'true'
+
+      # option 1: provide certs as strings
+
+      # KAFKA_SSL_KEYSTORE_TYPE: PEM
+      # KAFKA_SSL_KEYSTORE_CERTIFICATE_CHAIN: -----BEGIN CERTIFICATE-----\nMII....\n-----END CERTIFICATE-----
+      # KAFKA_SSL_KEYSTORE_KEY: -----BEGIN ENCRYPTED PRIVATE KEY-----\nMIIE...\n-----END ENCRYPTED PRIVATE KEY-----
+      # KAFKA_SSL_KEY_PASSWORD: codingharbour
+      # KAFKA_SSL_TRUSTSTORE_TYPE: PEM
+      # KAFKA_SSL_TRUSTSTORE_CERTIFICATES: -----BEGIN CERTIFICATE-----\nMIID...\n-----END CERTIFICATE-----
+
+      # option 2: use pem files
 
       KAFKA_SSL_KEYSTORE_LOCATION: /etc/kafka/secrets/broker-keypair.pem
       KAFKA_SSL_KEY_PASSWORD: codingharbour
       KAFKA_SSL_KEYSTORE_TYPE: PEM
       KAFKA_SSL_TRUSTSTORE_LOCATION: /etc/kafka/secrets/root.crt
       KAFKA_SSL_TRUSTSTORE_TYPE: PEM
+
       KAFKA_SSL_CLIENT_AUTH: "required"
       KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: 'true'
 
       KAFKA_AUTHORIZER_CLASS_NAME: kafka.security.authorizer.AclAuthorizer
-
-  # schema-registry:
-  #   image: confluentinc/cp-schema-registry:6.1.1
-  #   depends_on:
-  #     - zookeeper
-  #     - broker
-  #   ports:
-  #     - 8081:8081
-  #   container_name: schema-registry
-  #   environment:
-  #     SCHEMA_REGISTRY_HOST_NAME: schema-registry
